# cotlette

./: .gitignore  README.md  example.db  pyproject.toml  test_app.py
.github/workflows/: pypi.yaml
example/: test_gen_secret_key.py
example/apps/accounts/: __init__.py  apps.py  urls.py
example/apps/admin/: __init__.py  apps.py  urls.py
example/apps/groups/: __init__.py  api.py  apps.py  models.py
example/apps/home/: __init__.py  api.py  apps.py  models.py  urls.py
example/apps/users/: __init__.py  api.py  apps.py  models.py  utils.py
example/config/: settings.py
example/core/: __init__.py
example/templates/: 401.html  home.html
example/templates/accounts/: login.html  password_change.html
example/templates/admin/: groups.html  users.html
example/templates/includes/: navigation-fullscreen.html  navigation.html  sidebar.html
example/templates/layouts/: base-fullscreen.html  base-rtl.html  base.html
example/templates/pages/: index.html  profile.html  tables.html
src/cotlette/: __init__.py  database.py  models.py  query.py  shortcuts.py
src/cotlette/apps/: config.py  registry.py
src/cotlette/conf/: __init__.py  global_settings.py
src/cotlette/core/: exceptions.py  signals.py
src/cotlette/db/: __init__.py  utils.py
src/fastapi_admin/: models.py
test_project1/: __main__.py  asgi.py  main.py  manage.py  settings.py  test_db.sqlite3
test_project1/config/: settings.py  urls.py
test_project1/core/: __init__.py  settings.py  test_db.sqlite3
test_project1/home/: apps.py
test_project1/home1/: apps.py
test_project1/home2/: apps.py
test_project1/test_project1/: __main__.py  settings.py  urls.py  wsgi.py
(+239 files in other folders)
