[build-system]
requires = ["setuptools>=61.0.0,<69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cotlette"
version = "0.1.0"  # Явная версия проекта
requires-python = ">= 3.6"
dependencies = [
    "fastapi",
    "asgiref",
]

authors = [
  {name = "Vladimir Penzin", email = "pvenv@icloud.com"},
]

description = "A FastAPI-based admin interface."

readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: ASGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
cotlette = "cotlette.core.management:execute_from_command_line"

[project.urls]
Homepage = "https://github.com/yourusername/cotlette"
Documentation = "https://your-docs-url.com/"
"Release notes" = "https://github.com/yourusername/cotlette/releases"
Source = "https://github.com/yourusername/cotlette"
Tracker = "https://github.com/yourusername/cotlette/issues"